--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,8 @@
 @use '@carbon/react/scss/breakpoint' as *;
 @use '@carbon/react/scss/theme' as *;
 @use '@carbon/themes';
+@use '@carbon/ibm-security/scss/components/Card';
+@use '@carbon/ibm-security/scss/components/StatusIcon';
 
 $feature-flags: (
   ui-shell: true,
@@ -19,3 +21,4 @@ $feature-flags: (
     -moz-osx-font-smoothing: grayscale;
   }
   
+
