--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,21 +4,15 @@
 @use '@carbon/react/scss/breakpoint' as *;
 @use '@carbon/react/scss/theme' as *;
 @use '@carbon/themes';
-@use '@carbon/ibm-security/scss/components/Card';
+@use '@carbon/ibm-security/css/index.min';
 @use '@carbon/ibm-security/scss/components/StatusIcon';
 
 $feature-flags: (
   ui-shell: true,
   grid-columns-16: true,
+  
 );
 
 
-.cds--grid {
-    width:100vh !important;
-    height:100vh !important;
-    margin-left: 15% !important;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
   
 
